c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/compare_explicit_and_implict_addr.c
int main(void)
{
    int arr[10];
    /* It's illegal to compare these expressions because
     * they have different types: arr is converted to type int *,
     * while &arr will have type int (*)[10]
     */
    return arr == &arr;
}